# jackdaw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/jackdaw_animation/: Cargo.toml
crates/jackdaw_api/: Cargo.toml
crates/jackdaw_api_internal/: Cargo.toml
crates/jackdaw_avian_integration/: Cargo.toml
crates/jackdaw_camera/: Cargo.toml
crates/jackdaw_commands/: Cargo.toml
crates/jackdaw_dylib/: Cargo.toml
crates/jackdaw_feathers/: Cargo.toml
crates/jackdaw_fuzzy/: Cargo.toml
crates/jackdaw_geometry/: Cargo.toml
crates/jackdaw_jsn/: Cargo.toml
crates/jackdaw_loader/: Cargo.toml
crates/jackdaw_loader/src/: compat.rs  lib.rs
crates/jackdaw_node_graph/: Cargo.toml
crates/jackdaw_panels/: Cargo.toml
examples/: basic.rs  custom_components.rs  jsn_load.rs
src/: add_entity_picker.rs  alignment_guides.rs  asset_browser.rs  builtin_extensions.rs  command_palette.rs  commands.rs  core_extension.rs  default_style.rs  draw_brush.rs  entity_ops.rs  entity_templates.rs  ext_build.rs  extension_lifecycle.rs  extension_loader.rs  extension_watcher.rs  extensions_config.rs  extensions_dialog.rs  face_grid.rs  gizmos.rs  hierarchy.rs  hot_reload.rs  layout.rs  lib.rs  main.rs  material_browser.rs  material_preview.rs  modal_transform.rs  new_project.rs  physics_overlays.rs  physics_tool.rs  pie.rs  prefab_picker.rs  project_select.rs  restart.rs  scene_io.rs  sdk_paths.rs  texture_browser.rs  undo_snapshot.rs  viewport.rs  viewport_overlays.rs
src/brush/: mod.rs  (+3 more)
tests/: dylib_loading.rs  headless.rs  integration.rs
(+65 files in other folders)
